[MODORDERS-927] - Implement interception and update of invalid ISBNs during the POL update process (#773)