@@ -1,7 +1,6 @@
 package org.folio.helper;
 
 import static io.vertx.core.json.JsonObject.mapFrom;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isEqualCollection;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.isEmpty;
@@ -33,9 +32,9 @@ import java.util.Optional;
 import java.util.UUID;
 import java.util.Objects;
 import java.util.concurrent.CompletionException;
+import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.ws.rs.core.Response;
@@ -275,8 +274,7 @@ public class PurchaseOrderLineHelper {
    * Handles update of the order line. First retrieve the PO line from storage and depending on its content handle passed PO line.
    */
   public Future<Void> updateOrderLine(CompositePoLine compOrderLine, RequestContext requestContext) {
-    return purchaseOrderLineService.validateAndNormalizeISBN(Collections.singletonList(compOrderLine), requestContext)
-        .compose(v -> getPoLineByIdAndValidate(compOrderLine.getPurchaseOrderId(), compOrderLine.getId(), requestContext))
+    return getPoLineByIdAndValidate(compOrderLine.getPurchaseOrderId(), compOrderLine.getId(), requestContext)
         .compose(lineFromStorage -> getCompositePurchaseOrder(compOrderLine.getPurchaseOrderId(), requestContext)
           .map(compOrder -> addLineToCompOrder(compOrder, lineFromStorage))
           .map(compOrder -> {
@@ -287,6 +285,7 @@ public class PurchaseOrderLineHelper {
             return compOrder;
           })
         .compose(compOrder -> protectionService.isOperationRestricted(compOrder.getAcqUnitIds(), UPDATE, requestContext)
+          .compose(v -> purchaseOrderLineService.validateAndNormalizeISBNAndProductType(Collections.singletonList(compOrderLine), requestContext))
           .compose(v -> validateAccessProviders(compOrderLine, requestContext))
           .compose(v -> expenseClassValidationService.validateExpenseClassesForOpenedOrder(compOrder, Collections.singletonList(compOrderLine), requestContext))
           .compose(v -> processPoLineEncumbrances(compOrder, compOrderLine, lineFromStorage, requestContext))
@@ -503,7 +502,7 @@ public class PurchaseOrderLineHelper {
         lineFromStorage.setPoLineNumber(buildNewPoLineNumber(lineFromStorage, compOrder.getPoNumber()));
         return purchaseOrderLineService.saveOrderLine(lineFromStorage, requestContext);
       })
-      .collect(toList());
+      .toList();
 
     return GenericCompositeFuture.join(new ArrayList<>(futures))
       .mapEmpty();
@@ -550,7 +549,7 @@ public class PurchaseOrderLineHelper {
     RequestContext requestContext) {
     return getNewPoLines(compOrder, poLinesFromStorage)
       .map(compPOL -> createPoLine(compPOL, compOrder, requestContext))
-      .collect(toList());
+      .toList();
   }
 
   private boolean hasNewPoLines(CompositePurchaseOrder compPO, List<PoLine> poLinesFromStorage) {
@@ -561,7 +560,7 @@ public class PurchaseOrderLineHelper {
     List<String> lineIdsInStorage = poLinesFromStorage
       .stream()
       .map(PoLine::getId)
-      .collect(toList());
+      .toList();
 
     return compPO.getCompositePoLines()
       .stream()
@@ -650,7 +649,7 @@ public class PurchaseOrderLineHelper {
       .onSuccess(promise::complete)
       .onFailure(cause -> {
         // The case when specified order does not exist
-        if (cause instanceof HttpException && ((HttpException) cause).getCode() == Response.Status.NOT_FOUND.getStatusCode()) {
+        if (cause instanceof HttpException httpException && httpException.getCode() == Response.Status.NOT_FOUND.getStatusCode()) {
           promise.fail(new HttpException(422, ErrorCodes.ORDER_NOT_FOUND));
         } else {
           promise.fail(cause);
@@ -703,7 +702,7 @@ public class PurchaseOrderLineHelper {
 
     List<String> storageFundIds = storagePoLine.getFundDistribution().stream()
       .map(FundDistribution::getFundId)
-      .collect(Collectors.toList());
+      .toList();
 
     compositePoLine.getFundDistribution().stream()
       .filter(fundDistribution -> storageFundIds.contains(fundDistribution.getFundId()) && fundDistribution.getEncumbrance() == null)
@@ -728,7 +727,7 @@ public class PurchaseOrderLineHelper {
     if (isStatusChanged(compOrderLine, poLineFromStorage) && isCurrentStatusCanceled(compOrderLine)) {
       return purchaseOrderLineService.getPoLinesByOrderId(compOrderLine.getPurchaseOrderId(), requestContext)
         .compose(poLines -> {
-          List<PoLine> notCanceledPoLines = poLines.stream().filter(poLine -> !isDbPoLineStatusCancelled(poLine)).collect(toList());
+          List<PoLine> notCanceledPoLines = poLines.stream().filter(Predicate.not(this::isDbPoLineStatusCancelled)).toList();
           if (CollectionUtils.isNotEmpty(notCanceledPoLines)) {
             return inventoryManager.getItemsByPoLineIdsAndStatus(List.of(compOrderLine.getId()), ItemStatus.ON_ORDER.value(), requestContext)
               .compose(items -> {
